{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 196,
  "lineage": "a791848f-c3a1-5d74-e9f6-ac437933fbb1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "geocache_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-01a96dbeeb838d20e",
            "owner_id": "250789126509",
            "tags": {
              "Name": "geocache_public_igw"
            },
            "vpc_id": "vpc-06a254300ca94018c"
          },
          "depends_on": [
            "aws_vpc.geocache"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "geocache_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:250789126509:loadbalancer/app/geocache-alb/da369cd4df174c95",
            "arn_suffix": "app/geocache-alb/da369cd4df174c95",
            "dns_name": "geocache-alb-1629433675.ap-northeast-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:250789126509:loadbalancer/app/geocache-alb/da369cd4df174c95",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "geocache-alb",
            "security_groups": [
              "sg-0c574422ea9ccc32e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04a525714ef78e9b2"
              },
              {
                "subnet_id": "subnet-0e49eddea1e186eb9"
              }
            ],
            "subnets": [
              "subnet-04a525714ef78e9b2",
              "subnet-0e49eddea1e186eb9"
            ],
            "tags": {
              "Name": "geocache_alb"
            },
            "vpc_id": "vpc-06a254300ca94018c",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "depends_on": [
            "aws_security_group.geocache_alb",
            "aws_subnet.geocache_public_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "geocache_alb_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:250789126509:listener/app/geocache-alb/da369cd4df174c95/6c64e4b2102a4b22",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:250789126509:targetgroup/geocache/a7971a73cccb41c9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:250789126509:listener/app/geocache-alb/da369cd4df174c95/6c64e4b2102a4b22",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:250789126509:loadbalancer/app/geocache-alb/da369cd4df174c95",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.geocache_alb",
            "aws_lb_target_group.geocache"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "geocache",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:250789126509:targetgroup/geocache/a7971a73cccb41c9",
            "arn_suffix": "targetgroup/geocache/a7971a73cccb41c9",
            "deregistration_delay": 15,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:250789126509:targetgroup/geocache/a7971a73cccb41c9",
            "lambda_multi_value_headers_enabled": false,
            "name": "geocache",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "geocache"
            },
            "target_type": "instance",
            "vpc_id": "vpc-06a254300ca94018c"
          },
          "depends_on": [
            "aws_vpc.geocache"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "geocache_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-047638f67a53e3418",
            "owner_id": "250789126509",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "geocache_private_rt"
            },
            "vpc_id": "vpc-06a254300ca94018c"
          },
          "depends_on": [
            "aws_vpc.geocache"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "geocache_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04da1eb7a5a692896",
            "owner_id": "250789126509",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a96dbeeb838d20e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "geocache_public_rt"
            },
            "vpc_id": "vpc-06a254300ca94018c"
          },
          "depends_on": [
            "aws_internet_gateway.geocache_public",
            "aws_vpc.geocache"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "geocache_private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b908c9c0366dd4db",
            "route_table_id": "rtb-047638f67a53e3418",
            "subnet_id": "subnet-02f399946d1a137b9"
          },
          "depends_on": [
            "aws_route_table.geocache_private",
            "aws_subnet.geocache_private_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0454573143a8c6e23",
            "route_table_id": "rtb-047638f67a53e3418",
            "subnet_id": "subnet-0a040907c3c4da85e"
          },
          "depends_on": [
            "aws_route_table.geocache_private",
            "aws_subnet.geocache_private_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "geocache_public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0203907404c3335c8",
            "route_table_id": "rtb-04da1eb7a5a692896",
            "subnet_id": "subnet-0e49eddea1e186eb9"
          },
          "depends_on": [
            "aws_route_table.geocache_public",
            "aws_subnet.geocache_public_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9b770c67d8014b6",
            "route_table_id": "rtb-04da1eb7a5a692896",
            "subnet_id": "subnet-04a525714ef78e9b2"
          },
          "depends_on": [
            "aws_route_table.geocache_public",
            "aws_subnet.geocache_public_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "geocache_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:250789126509:security-group/sg-0c574422ea9ccc32e",
            "description": "geocache_alb",
            "egress": [],
            "id": "sg-0c574422ea9ccc32e",
            "ingress": [],
            "name": "geocache_alb",
            "name_prefix": null,
            "owner_id": "250789126509",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-06a254300ca94018c"
          },
          "depends_on": [
            "aws_vpc.geocache"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "geocache_cluster_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:250789126509:security-group/sg-03c0c919be61aced3",
            "description": "geocache_cluster_instance",
            "egress": [],
            "id": "sg-03c0c919be61aced3",
            "ingress": [],
            "name": "geocache_cluster_instance",
            "name_prefix": null,
            "owner_id": "250789126509",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-06a254300ca94018c"
          },
          "depends_on": [
            "aws_vpc.geocache"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "geocache_privatelink",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:250789126509:security-group/sg-002b54810b72bede9",
            "description": "geocache_privatelink",
            "egress": [],
            "id": "sg-002b54810b72bede9",
            "ingress": [],
            "name": "geocache_privatelink",
            "name_prefix": null,
            "owner_id": "250789126509",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-06a254300ca94018c"
          },
          "depends_on": [
            "aws_vpc.geocache"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "geocache_alb_egress_to_geocache_cluster_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 32768,
            "id": "sgrule-3154184778",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c574422ea9ccc32e",
            "self": false,
            "source_security_group_id": "sg-03c0c919be61aced3",
            "to_port": 65535,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.geocache_alb",
            "aws_security_group.geocache_cluster_instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "geocache_alb_ingress_http_to_cluster_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "126.74.158.208/28"
            ],
            "description": "geocache_alb_ingress_https_to_geocache_cluster_instance",
            "from_port": 80,
            "id": "sgrule-3579620264",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c574422ea9ccc32e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.geocache_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "geocache_cluster_instance_egress_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-4172901785",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03c0c919be61aced3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.geocache_cluster_instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "geocache_cluster_instance_ingress_from_geocache_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 32768,
            "id": "sgrule-924975141",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03c0c919be61aced3",
            "self": false,
            "source_security_group_id": "sg-0c574422ea9ccc32e",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.geocache_alb",
            "aws_security_group.geocache_cluster_instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "geocache_privatelink_ingress_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "geocache_privatelink",
            "from_port": 443,
            "id": "sgrule-263668080",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-002b54810b72bede9",
            "self": false,
            "source_security_group_id": "sg-03c0c919be61aced3",
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.geocache_cluster_instance",
            "aws_security_group.geocache_privatelink"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "geocache_private_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:250789126509:subnet/subnet-02f399946d1a137b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.51.0/26",
            "id": "subnet-02f399946d1a137b9",
            "map_public_ip_on_launch": false,
            "owner_id": "250789126509",
            "tags": {
              "Name": "geocache_private_subnets"
            },
            "vpc_id": "vpc-06a254300ca94018c"
          },
          "depends_on": [
            "aws_vpc.geocache"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:250789126509:subnet/subnet-0a040907c3c4da85e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.51.64/26",
            "id": "subnet-0a040907c3c4da85e",
            "map_public_ip_on_launch": false,
            "owner_id": "250789126509",
            "tags": {
              "Name": "geocache_private_subnets"
            },
            "vpc_id": "vpc-06a254300ca94018c"
          },
          "depends_on": [
            "aws_vpc.geocache"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "geocache_public_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:250789126509:subnet/subnet-0e49eddea1e186eb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.51.128/26",
            "id": "subnet-0e49eddea1e186eb9",
            "map_public_ip_on_launch": false,
            "owner_id": "250789126509",
            "tags": {
              "Name": "geocache_public_subnets"
            },
            "vpc_id": "vpc-06a254300ca94018c"
          },
          "depends_on": [
            "aws_vpc.geocache"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:250789126509:subnet/subnet-04a525714ef78e9b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.51.192/26",
            "id": "subnet-04a525714ef78e9b2",
            "map_public_ip_on_launch": false,
            "owner_id": "250789126509",
            "tags": {
              "Name": "geocache_public_subnets"
            },
            "vpc_id": "vpc-06a254300ca94018c"
          },
          "depends_on": [
            "aws_vpc.geocache"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "geocache",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:250789126509:vpc/vpc-06a254300ca94018c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.51.0/24",
            "default_network_acl_id": "acl-03b6795c930caa39c",
            "default_route_table_id": "rtb-0e39d5efe85801c71",
            "default_security_group_id": "sg-043476c580f062218",
            "dhcp_options_id": "dopt-34c63d50",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06a254300ca94018c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e39d5efe85801c71",
            "owner_id": "250789126509",
            "tags": {
              "Name": "geocache"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "geocache_ecr_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-09783e2f08240a101-h02qicib.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-09783e2f08240a101-h02qicib-ap-northeast-1a.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-09783e2f08240a101-h02qicib-ap-northeast-1c.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "api.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z05341103GANVUZUWRIPC"
              }
            ],
            "id": "vpce-09783e2f08240a101",
            "network_interface_ids": [
              "eni-010320dd93d64f813",
              "eni-04b65f5841e5ecd00"
            ],
            "owner_id": "250789126509",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-002b54810b72bede9"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-02f399946d1a137b9",
              "subnet-0a040907c3c4da85e"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06a254300ca94018c"
          },
          "depends_on": [
            "aws_security_group.geocache_privatelink",
            "aws_subnet.geocache_private_subnets",
            "aws_vpc.geocache"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "geocache_ecr_dkr",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-0b164a768748d16da-jqpt6b1g.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0b164a768748d16da-jqpt6b1g-ap-northeast-1a.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0b164a768748d16da-jqpt6b1g-ap-northeast-1c.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "dkr.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0533959YN7YQW3I965G"
              },
              {
                "dns_name": "*.dkr.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0533959YN7YQW3I965G"
              }
            ],
            "id": "vpce-0b164a768748d16da",
            "network_interface_ids": [
              "eni-02af0e9bc0a3baa87",
              "eni-0dcaefea355b58d45"
            ],
            "owner_id": "250789126509",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-002b54810b72bede9"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-02f399946d1a137b9",
              "subnet-0a040907c3c4da85e"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06a254300ca94018c"
          },
          "depends_on": [
            "aws_security_group.geocache_privatelink",
            "aws_subnet.geocache_private_subnets",
            "aws_vpc.geocache"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "geocache_ecs-agent",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-0e815c1ac30fd2683-khz1yzk0.ecs-a.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0e815c1ac30fd2683-khz1yzk0-ap-northeast-1a.ecs-a.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0e815c1ac30fd2683-khz1yzk0-ap-northeast-1c.ecs-a.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ecs-a.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z05340253PMI07WZ4Z8VB"
              }
            ],
            "id": "vpce-0e815c1ac30fd2683",
            "network_interface_ids": [
              "eni-08d08cad505234b4f",
              "eni-0a8d9742d25b9f9d8"
            ],
            "owner_id": "250789126509",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-002b54810b72bede9"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecs-agent",
            "state": "available",
            "subnet_ids": [
              "subnet-02f399946d1a137b9",
              "subnet-0a040907c3c4da85e"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06a254300ca94018c"
          },
          "depends_on": [
            "aws_security_group.geocache_privatelink",
            "aws_subnet.geocache_private_subnets",
            "aws_vpc.geocache"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "geocache_ecs-telemetry",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-02ef4b1f61ae7281a-akgliuac.ecs-t.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-02ef4b1f61ae7281a-akgliuac-ap-northeast-1a.ecs-t.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-02ef4b1f61ae7281a-akgliuac-ap-northeast-1c.ecs-t.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ecs-t.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z05339351E0C9LBBSVNU5"
              }
            ],
            "id": "vpce-02ef4b1f61ae7281a",
            "network_interface_ids": [
              "eni-05ac468ab518a2ec9",
              "eni-0e5740b814319025e"
            ],
            "owner_id": "250789126509",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-002b54810b72bede9"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecs-telemetry",
            "state": "available",
            "subnet_ids": [
              "subnet-02f399946d1a137b9",
              "subnet-0a040907c3c4da85e"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06a254300ca94018c"
          },
          "depends_on": [
            "aws_security_group.geocache_privatelink",
            "aws_subnet.geocache_private_subnets",
            "aws_vpc.geocache"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "geocache_s3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "52.219.0.0/20",
              "52.219.136.0/22",
              "52.219.16.0/22",
              "52.219.68.0/22"
            ],
            "id": "vpce-0f8aac709c4ab1a51",
            "owner_id": "250789126509",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-047638f67a53e3418"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06a254300ca94018c"
          },
          "depends_on": [
            "aws_route_table.geocache_private",
            "aws_vpc.geocache"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "geocacheecs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-00f89bf8dca9feb91-bajncjfm.ecs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-00f89bf8dca9feb91-bajncjfm-ap-northeast-1a.ecs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-00f89bf8dca9feb91-bajncjfm-ap-northeast-1c.ecs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ecs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z05340201XJEE0F6S4J5R"
              }
            ],
            "id": "vpce-00f89bf8dca9feb91",
            "network_interface_ids": [
              "eni-0348bfb50463a8e54",
              "eni-0fc2c44cb62b60c64"
            ],
            "owner_id": "250789126509",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-002b54810b72bede9"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecs",
            "state": "available",
            "subnet_ids": [
              "subnet-02f399946d1a137b9",
              "subnet-0a040907c3c4da85e"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06a254300ca94018c"
          },
          "depends_on": [
            "aws_security_group.geocache_privatelink",
            "aws_subnet.geocache_private_subnets",
            "aws_vpc.geocache"
          ]
        }
      ]
    }
  ]
}